# neo-riscv-vm

./: .gitignore  Cargo.toml  README.md  VALIDATION_COMPLETE.md  check_opcodes.py  contract.nef  manifest.json  neo-riscv-vm.sln  rust-toolchain.toml  test_script.rs
.github/workflows/: cross-repo-validation.yml
benches/: benchmark_harness.rs
benches/benchmarks/: arithmetic.rs  control_flow.rs  mod.rs  stack_ops.rs  stats.rs
compat/Neo.Riscv.Adapter/: IRiscvVmBridge.cs  NativeRiscvVmBridge.Callback.cs  NativeRiscvVmBridge.ContractInterop.cs  NativeRiscvVmBridge.Execution.cs  NativeRiscvVmBridge.NativeStack.cs  NativeRiscvVmBridge.RuntimeInterop.cs  NativeRiscvVmBridge.StorageInterop.cs  NativeRiscvVmBridge.cs  Neo.Riscv.Adapter.csproj  RiscvAdapterPlugin.cs  RiscvApplicationEngine.cs  RiscvApplicationEngineProvider.cs  RiscvApplicationEngineProviderResolver.cs  RiscvCompatibilityContracts.cs  RiscvExceptions.cs  RiscvExecutionDispatcher.cs  RiscvExecutionResult.cs
compat/Neo.Riscv.Adapter.Tests/: AdapterTestProtocolSettings.cs  Neo.Riscv.Adapter.Tests.csproj  RiscvTestEnvironment.cs  UT_NativeRiscvVmBridgeRoundTrip.cs  UT_RiscvApplicationEngineFaults.cs  UT_RiscvApplicationEngineMethodDispatch.cs  UT_RiscvApplicationEngineProvider.cs  UT_RiscvApplicationEngineProviderResolver.cs  UT_RiscvCallTCompatibility.cs  UT_RiscvContractCallCompatibility.cs  UT_RiscvExecutionDispatcher.cs  UT_RiscvSyscallCompatibility.cs  UT_StateRootConsistency.cs  UT_VerificationMultiSigCompatibility.cs
compat/Neo.VM.Riscv.Tests/: Neo.VM.Riscv.Tests.csproj  RiscvVmRunner.cs  UT_RiscvVmJson.cs
config/: networks.json
crates/neo-riscv-abi/: Cargo.toml
crates/neo-riscv-abi/src/: bin.rs  callback_codec.rs  fast_codec.rs  lib.rs  result_codec.rs
crates/neo-riscv-abi/tests/: codec_tests.rs
crates/neo-riscv-contract-harness/: Cargo.toml
crates/neo-riscv-contract-harness/src/: lib.rs
crates/neo-riscv-devpack/: Cargo.toml
crates/neo-riscv-guest/: Cargo.toml
crates/neo-riscv-guest-module/: Cargo.toml  guest.polkavm
crates/neo-riscv-host/: Cargo.toml
crates/neo-riscv-host/benches/: benchmark_harness.rs  propagate_update_bench.rs
crates/neo-riscv-host/benches/benchmarks/: arithmetic.rs  codec.rs  control_flow.rs  mod.rs  stack_ops.rs
crates/neo-riscv-host/src/: bridge.rs  ffi.rs  lib.rs  pricing.rs  profiling.rs  runtime_cache.rs
crates/neo-riscv-host/tests/: csharp_contracts.rs  error_propagation.rs  fuzz_compatibility.proptest-regressions  fuzz_compatibility.rs  gas_validation.rs  opcode_matrix_tests.rs  parity.rs  runtime.rs
crates/neo-riscv-host/tests/opcode_matrix/: arithmetic.rs  control.rs  fuzzing.rs  generator.rs  mod.rs  regression.rs  stack.rs  types.rs
crates/neo-riscv-rt/: Cargo.toml
docs/: ACHIEVED_ZERO_CHANGE.md  API_REFERENCE.md  ARCHITECTURE.md  CURRENT_STATUS.md  DEPLOYMENT.md  FINAL_VALIDATION_REPORT.md  INDEX.md  NEP-RISC-V-VM.md  OPTIMIZATION_PLAN.md  RISCV-VM-ARCHITECTURE.md  TESTING.md  TEST_REPORT.md  ZERO_CHANGE_ARCHITECTURE.md  architecture-optimization-findings.md  architecture-syscalls.md  architecture.md  benchmarking.md  contract-examples.md  cow-alias-design.md  deployment-workflow.md  deployment.md  entry-point.md  getting-started.md  logging.md  monitoring.md  native-contracts.md  specification.tex  syscall-api.md  troubleshooting.md  whitepaper.aux  whitepaper.out  whitepaper.tex  whitepaper.toc
docs/plans/: 2026-03-17-neo-master-n3-polkavm-design.md  2026-03-18-riscv-vm-current-state.md  (+12 more)
examples/: README.md
fuzz/: Cargo.toml  README.md
fuzz/artifacts/stack_ops/: leak-9968cc84b1b7e16e28e06e579869dea95e6f5ae2  leak-d17a9d768d3bdd530be392465745b6ae3baa595f  oom-e88cf233cb75d5f56ac366964ec51edb39e9036f
fuzz/corpus/opcodes/: seeds.txt
fuzz/src/: exception_handling.rs  generators.rs  lib.rs  mem_op.rs  opcode_seq.rs  stack_ops.rs  stack_ops_builder.rs  syscall_fuzz.rs  type_convert.rs  whole_system_parity.rs
fuzz/src/generators/: opcode_gen.rs  value_gen.rs
neo-devpack-dotnet/: Makefile  README.md
schemas/: abi.json  manifest.json  permissions.json
scripts/: build-contract.sh  check-validation-progress.sh  compare-stateroot-range.sh  compile-riscv-contract.sh  cross-repo-test.sh  deploy-contract.sh  elf-to-polkavm.sh  generate-manifest.sh  invoke-contract.sh  minify-fuzz-corpus.sh  neo-riscv-cli.sh  package-adapter-plugin.sh  package-contract.sh  query-storage.sh  regenerate-guest-blob.sh  run-all-tests.sh  run-bounded-fuzz.sh  run-continuous-validator.sh  run-fuzz-overnight.sh  run-fuzz-seed-matrix.sh  run-mainnet-stateroot-validation.sh  run-riscv-contract-tests.sh  test-e2e-deployment.sh  test-ffi-resolution.sh  test-plugin-loading.sh  validate-stateroot.sh  validator-24h-checkin.sh  verify-all.sh  verify-binary.sh  verify-contract.sh
(+375 files in other folders)
