[package]
name = "neo-riscv-abi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
sha2 = { workspace = true, default-features = false }

[lib]
path = "src/lib.rs"
