[package]
name = "neo-riscv-abi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postcard.workspace = true
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
sha2 = { workspace = true, default-features = false }
bytes = { version = "1.5", default-features = false }

[lib]
path = "src/lib.rs"
