[package]
name = "neo-riscv-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
neo-riscv-abi = { path = "../neo-riscv-abi" }
neo-riscv-guest = { path = "../neo-riscv-guest" }
polkavm.workspace = true
postcard = { version = "1.1.3", features = ["alloc"] }
tracing = "0.1"

[lib]
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"
