[package]
name = "neo-riscv-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
neo-riscv-abi = { path = "../neo-riscv-abi" }
neo-riscv-guest = { path = "../neo-riscv-guest" }
polkavm.workspace = true
postcard.workspace = true
tracing = "0.1"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bench]]
name = "benchmark_harness"
harness = false

[[bench]]
name = "propagate_update_bench"
harness = false
